--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -17,7 +17,7 @@
     width: 100vw;
     background-size: 100% 100%; 
     background-repeat: no-repeat;
-    background-image: url('./img/mainbanner.png');
+    background-image: url('../img/mainbanner.png');
     height: 20vh;
 }
 
